Creada la base de los iconos.
Se ha creado el layaout que compartiran los iconos, con la
propiedad condicional para que el de collapse despliegue el menu.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,12 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import CollapseIcon from "../components/Icons/CollapseIcon.astro";
 ---
 
-<Layout title="Welcome to Astro.">
-  <main></main>
+<Layout title="Felipe Ramirez | FrontEnd Dev">
+  <main>
+    <CollapseIcon></CollapseIcon>
+  </main>
 </Layout>
 
 <style></style>
