Funcionalidad del navbar
Se ha migrado correctamente toda la funcionalidad del componente
nav.

--- a/src/layouts/IconLayout.astro
+++ b/src/layouts/IconLayout.astro
@@ -45,5 +45,8 @@ const { collapse } = Astro.props;
 
   svg[data-collapse] {
     cursor: pointer;
+    position: fixed;
+    top: 10px;
+    right: 10px;
   }
 </style>
