--- a/src/components/Icons/CollapseIcon.astro
+++ b/src/components/Icons/CollapseIcon.astro
@@ -2,6 +2,19 @@
 import IconLayout from "../../layouts/IconLayout.astro";
 ---
 
+<script>
+  const collapse = document.querySelector("nav > svg");
+
+  const handleClick = () => {
+    const changeState = new Event("changeCollapseState", {
+      bubbles: true,
+    });
+    collapse.dispatchEvent(changeState);
+  };
+
+  collapse.addEventListener("click", handleClick);
+</script>
+
 <IconLayout collapse={true}>
   <path
     d="M3 7H21"
