--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,6 +10,9 @@ const { title } = Astro.props;
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Me llamo Felipe Ramirez, desarrollador FrontEnd
+      residente en Valencia (España). Aquí puedes conocerme un poco más y ver
+      algunos de mis últimos proyectos">
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
@@ -21,6 +24,16 @@ const { title } = Astro.props;
 </html>
 
 <style is:global>
+  @font-face {
+    font-family: "SF UI Text Heavy";
+    src: url("/fonts/SFUIText-Heavy.woff");
+  }
+
+  @font-face {
+    font-family: "SF UI Text";
+    src: url("/fonts/SFUIText-Regular.woff");
+  }
+
   :root {
     /*    Base colors    */
     --clr-base-txt: #eee;
@@ -55,6 +68,7 @@ const { title } = Astro.props;
     scrollbar-color: var(--clr-quaternary) var(--clr-base-lt);
     scrollbar-width: 1em;
     scroll-behavior: smooth;
+    font-family: "SF UI Text", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
 
   ::-webkit-scrollbar {
