--- a/src/components/Icons/GitHubIcon.astro
+++ b/src/components/Icons/GitHubIcon.astro
@@ -1,5 +1,5 @@
 ---
-import IconLayout from "../../layouts/IconLayout.astro";
+import IconLayout from "@layouts/IconLayout.astro";
 ---
 
 <IconLayout>
