--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -2,11 +2,12 @@
 import CollapseIcon from "./Icons/CollapseIcon.astro";
 import GitHubIcon from "./Icons/GitHubIcon.astro";
 import LinkedInIcon from "./Icons/LinkedInIcon.astro";
+import HeartIcon from "./Icons/HeartIcon.astro";
 ---
 
 <script>
   const nav = document.querySelector("nav");
-  const collapseButton = document.querySelector(".collapse-icon-container")
+  const collapseButton = document.querySelector(".collapse-icon-container");
   const anchors = document.querySelectorAll("li a");
 
   const changeCollapseState = () => {
@@ -24,9 +25,11 @@ import LinkedInIcon from "./Icons/LinkedInIcon.astro";
     if (isCollapse) {
       setTimeout(() => {
         content.style.display = "none";
+        nav.style["mix-blend-mode"] = "difference";
       }, 700);
     } else {
       content.style.display = "block";
+      nav.style["mix-blend-mode"] = "normal";
     }
   };
 
@@ -47,12 +50,9 @@ import LinkedInIcon from "./Icons/LinkedInIcon.astro";
         <a href="#about" aria-label="Go about me section">Sobre Mí</a>
       </li>
       <li>
-        <a href="#proyects" aria-label="Go my proyects section"
-          >Proyectos</a
-        >
+        <a href="#projects" aria-label="Go my proyects section">Proyectos</a>
       </li>
     </ul>
-    <hr />
     <div class="icons">
       <a
         href="https://github.com/JFelipeRG"
@@ -65,11 +65,14 @@ import LinkedInIcon from "./Icons/LinkedInIcon.astro";
         aria-label="Go my linkedin page"><LinkedInIcon /></a
       >
     </div>
+    <hr />
+    <span class="navbar-footer">Desarrollado con <span class="footer-icon"><HeartIcon></HeartIcon></span></span>
   </div>
 </nav>
 
 <style>
   nav {
+    mix-blend-mode: difference;
     display: block;
     position: fixed;
     z-index: 2;
@@ -93,30 +96,25 @@ import LinkedInIcon from "./Icons/LinkedInIcon.astro";
   }
 
   nav.unfold {
-    background: var(--clr-base-txt);
+    background: #ccc;
     width: 100%;
     max-width: 440px;
     height: 100%;
-    color: var(--clr-tertiary);
+    color: var(--clr-base-bg);
     transition: background 0.3s ease-in-out, color 0.3s ease-in-out;
     animation: unfold 0.8s ease-in-out;
   }
 
   .collapse-icon-container {
-    color: var(--clr-tertiary);
-    filter: brightness(.8);
+    position: relative;
     width: 3.5rem;
     height: 3.5rem;
     position: fixed;
-    top: 15px;
+    top: 10px;
     right: 20px;
     padding: 5px;
     border-radius: 50%;
     cursor: pointer;
-  }
-
-  .collapse-icon-container:hover {
-    backdrop-filter: contrast(60%);
   }
 
   .content-navbar {
@@ -138,6 +136,7 @@ import LinkedInIcon from "./Icons/LinkedInIcon.astro";
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    font-weight: 600;
   }
 
   a {
@@ -146,7 +145,7 @@ import LinkedInIcon from "./Icons/LinkedInIcon.astro";
     flex-direction: column;
     align-items: center;
     text-decoration: none;
-    color: var(--clr-tertiary);
+    color: var(--clr-base-bg);
   }
 
   a:hover {
@@ -164,7 +163,7 @@ import LinkedInIcon from "./Icons/LinkedInIcon.astro";
   }
 
   li a:hover::after {
-    background: var(--clr-tertiary);
+    background: var(--clr-primary);
     animation: underline 0.5s forwards;
   }
 
@@ -178,10 +177,25 @@ import LinkedInIcon from "./Icons/LinkedInIcon.astro";
     display: flex;
     justify-content: center;
     gap: 20px;
+    margin-top: 20px;
   }
 
   .icons a {
     width: 3rem;
+  }
+
+  .navbar-footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+  }
+
+  .footer-icon {
+    display: inline-block;
+    width: 1.2rem;
+    animation: beat .7s ease-in-out infinite alternate both;
+    filter: saturate(2) brightness(.9);
   }
 
   @keyframes fold {
@@ -216,6 +230,28 @@ import LinkedInIcon from "./Icons/LinkedInIcon.astro";
     }
     100% {
       width: 100%;
+    }
+  }
+
+  @keyframes beat {
+    0% {
+      scale: 0.8;
+    }
+    100% {
+      scale: 1;
+    }
+  }
+
+  @media (max-width: 800px) {
+    .collapse-icon-container {
+      top: 5px;
+      right: 5px;
+    }
+  }
+
+  @media (max-width: 320px) {
+    ul {
+      font-size: 1.3rem;
     }
   }
 </style>
