--- a/src/components/Sections/HeroSection.astro
+++ b/src/components/Sections/HeroSection.astro
@@ -10,9 +10,16 @@ import SectionLayout from "@layouts/SectionLayout.astro";
     <h1>¡Hola! <span>Soy</span> Juan <span>Felipe</span> Ramirez</h1>
     <p>Junior <span>Front-End</span> Developer</p>
   </div>
-  <a class="hero-button" href="#about" aria-label="Go about me section">
-    Conóceme
-  </a>
+  <div class="buttons-container">
+    <a class="hero-button" href="#about" aria-label="Go about me section">
+      Conóceme
+    </a>
+    <a
+      class="hero-button"
+      href="/pdf/cv.pdf"
+      download="Juan Felipe Ramirez Gaviria CV.pdf">Descargar CV</a
+    >
+  </div>
 </SectionLayout>
 
 <style scoped>
@@ -27,25 +34,24 @@ import SectionLayout from "@layouts/SectionLayout.astro";
     margin: auto;
     aspect-ratio: 1/1;
     backdrop-filter: invert(0.5);
-    border-radius: 50%;
+    border-radius 30% 70% 70% 30% / 30% 30% 70% 70%;
+    box-shadow: 15px 15px 50px rgba(0,0,0,0.2);
+    background: #8f7966;
     padding: 20px;
     border: 5px solid var(--clr-tertiary);
-  }
-
-  @media (max-width: 350px) {
-    picture {
-      width: 300px;
-      aspect-ratio: 1/1;
-    }
+    animation: morphing 10s infinite;
   }
 
   img {
     width: 100%;
+    height: 100%;
   }
 
   h1 {
+    margin: 10px 0;
     max-width: 500px;
     font-size: 2.2rem;
+    line-height: 1.2;
     letter-spacing: 2px;
     color: var(--clr-base-txt);
   }
@@ -62,6 +68,11 @@ import SectionLayout from "@layouts/SectionLayout.astro";
     text-transform: uppercase;
   }
 
+  .buttons-container {
+    display: flex;
+    gap: 30px;
+  }
+
   .hero-button {
     margin-top: 10px;
     padding: 10px;
@@ -72,5 +83,61 @@ import SectionLayout from "@layouts/SectionLayout.astro";
     font-weight: 600;
     background: var(--clr-tertiary);
     border-radius: 7px;
+  }
+
+  @keyframes morphing {
+		0%,
+    100% {
+			border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
+			box-shadow: 15px 15px 50px rgba(158, 158, 158, 0.2);
+		}
+		25% {
+			border-radius: 58% 42% 75% 25% / 76% 46% 54% 24%;
+		}
+		50% {
+			border-radius: 50% 50% 33% 67% / 55% 27% 73% 45%;
+			box-shadow: -10px -5px 50px rgba(158, 158, 158, 0.2);
+		}
+		75% {
+			border-radius: 33% 67% 58% 42% / 63% 68% 32% 37%;
+		}
+	}
+
+  @media (max-width: 478px) {
+    picture {
+      width: 250px;
+      aspect-ratio: 1/1;
+    }
+
+    .hero-button {
+      font-size: 1rem;
+    }
+  }
+
+  @media (max-width: 350px) {
+    picture {
+      width: 300px;
+      aspect-ratio: 1/1;
+    }
+  }
+
+  @media (max-width: 320px) {
+    picture {
+      width: 230px;
+      aspect-ratio: 1/1;
+    }
+
+    h1 {
+      font-size: 1.7rem;
+    }
+
+    p {
+      font-size: 1rem;
+    }
+
+    .hero-button {
+      padding: 7px;
+      font-size: 0.9rem;
+    }
   }
 </style>
