--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -68,10 +68,17 @@ const { title } = Astro.props;
     scrollbar-color: var(--clr-tertiary) var(--clr-base-lt);
     scrollbar-width: 1rem;
     scroll-behavior: smooth;
-    font-size: 1rem;
+    font-size: 1.1rem;
     font-family: "SF UI Text", system-ui, -apple-system, BlinkMacSystemFont,
       "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
       "Helvetica Neue", sans-serif;
+  }
+
+  main > section:first-child {
+    background: url(/img/hero-bg-mobile.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
   }
 
   @media (min-width: 700px) {
