--- a/src/components/Sections/Projects/ProjectContainer.astro
+++ b/src/components/Sections/Projects/ProjectContainer.astro
@@ -131,11 +131,11 @@ const { data } = Astro.props;
   }
 
   .tag[data-type="JavaScript"] {
-    --color: #f8ea83;
+    --color: #feec64;
   }
 
   .tag[data-type="Vue"] {
-    --color: #40cb8d;
+    --color: #4fffb0;
   }
 
   .tag[data-type="WebComponents"] {
@@ -146,11 +146,18 @@ const { data } = Astro.props;
     --color: #f8b28e;
   }
 
+  @media (max-width: 1600px) and (min-width: 1200px){
+    .container {
+      
+    }
+  }
+
   @media (max-width: 790px) {
     .container {
       width: 300px;
       height: 480px;
       flex-direction: column;
+
     }
 
     img {
