--- a/src/components/ProjectContainer.astro
+++ b/src/components/ProjectContainer.astro
@@ -97,8 +97,8 @@ const { data } = Astro.props;
   a {
     font-size: 1rem;
     text-decoration: none;
-    color: var(--clr-primary);
-    filter: brightness(1.2);
+    color: var(--clr-tertiary);
+    filter: brightness(1.1);
   }
 
   a:hover {
@@ -148,7 +148,7 @@ const { data } = Astro.props;
 
   @media (max-width: 1600px) and (min-width: 1200px){
     .container {
-      
+
     }
   }
 
