Informacion del about me.
Se ha completado el HTML de las secciones.

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,7 +12,7 @@ const { title } = Astro.props;
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Me llamo Felipe Ramirez, desarrollador FrontEnd
+      content="Me llamo Juan Felipe Ramirez, desarrollador FrontEnd
       residente en Valencia (España). Aquí puedes conocerme un poco más y ver
       algunos de mis últimos proyectos"
     />
