--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
 import Layout from "@layouts/Layout.astro";
 import NavBar from "@components/NavBar.astro";
-import HeroSection from "./HeroSection.astro";
-import AboutSection from "./AboutSection.astro";
-import ProyectsSection from "./ProjectsSection.astro";
+import HeroSection from "@components/sections/HeroSection.astro";
+import AboutSection from "@components/sections/AboutSection.astro";
+import ProyectsSection from "@components/sections/ProjectsSection.astro";
 ---
 
 <Layout title="Felipe Ramirez | FrontEnd Dev">
