--- a/src/components/sections/HeroSection.astro
+++ b/src/components/sections/HeroSection.astro
@@ -4,8 +4,8 @@ import SectionLayout from "@layouts/SectionLayout.astro";
 
 <SectionLayout id="hero">
   <div class="personal-info">
-    <picture>
-      <img src="/img/me.webp" alt="Personal image for hero page" />
+    <picture class="avatar-container">
+      <img class="avatar" src="/img/me.webp" alt="Personal image for hero page" />
     </picture>
     <h1>¡Hola! <span>Soy</span> Juan <span>Felipe</span> Ramirez</h1>
     <p>Junior <span>Front-End</span> Developer</p>
@@ -28,7 +28,7 @@ import SectionLayout from "@layouts/SectionLayout.astro";
     line-height: 1.6;
   }
 
-  picture {
+  .avatar-container {
     display: block;
     width: 350px;
     margin: auto;
@@ -42,29 +42,29 @@ import SectionLayout from "@layouts/SectionLayout.astro";
     animation: morphing 10s infinite;
   }
 
-  img {
+  .avatar {
     width: 100%;
     height: 100%;
   }
 
-  h1 {
+  .personal-info h1 {
     margin: 10px 0;
     max-width: 500px;
     font-size: 2.2rem;
     line-height: 1.2;
-    letter-spacing: 2px;
+    letter-spacing: 1.5px;
     color: var(--clr-base-txt);
   }
 
-  span {
+  .personal-info span {
     color: var(--clr-tertiary);
     text-shadow: 1px 1px 1px black;
   }
 
-  p {
+  .personal-info p {
     font-weight: 600;
     letter-spacing: 1px;
-    font-size: 1.1rem;
+    font-size: 1.2rem;
     text-transform: uppercase;
   }
 
@@ -103,41 +103,22 @@ import SectionLayout from "@layouts/SectionLayout.astro";
 		}
 	}
 
-  @media (max-width: 478px) {
-    picture {
-      width: 250px;
-      aspect-ratio: 1/1;
-    }
-
-    .hero-button {
-      font-size: 1rem;
-    }
-  }
-
-  @media (max-width: 350px) {
-    picture {
-      width: 300px;
-      aspect-ratio: 1/1;
-    }
-  }
-
-  @media (max-width: 320px) {
-    picture {
+  @media (max-width: 600px) {
+    .avatar-container {
       width: 230px;
       aspect-ratio: 1/1;
     }
 
-    h1 {
-      font-size: 1.7rem;
+    .personal-info h1 {
+      font-size: 1.75rem;
     }
 
-    p {
+    .personal-info p {
       font-size: 1rem;
     }
 
     .hero-button {
-      padding: 7px;
-      font-size: 0.9rem;
+      font-size: 1rem;
     }
   }
 </style>
