--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,11 +28,6 @@ const { title } = Astro.props;
 
 <style is:global>
   @font-face {
-    font-family: "SF UI Text Heavy";
-    src: url("/fonts/SFUIText-Heavy.woff");
-  }
-
-  @font-face {
     font-family: "SF UI Text";
     src: url("/fonts/SFUIText-Regular.woff");
   }
@@ -68,7 +63,7 @@ const { title } = Astro.props;
     scrollbar-color: var(--clr-tertiary) var(--clr-base-lt);
     scrollbar-width: 1rem;
     scroll-behavior: smooth;
-    font-size: 1.1rem;
+    font-size: 1rem;
     font-family: "SF UI Text", system-ui, -apple-system, BlinkMacSystemFont,
       "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
       "Helvetica Neue", sans-serif;
@@ -90,7 +85,7 @@ const { title } = Astro.props;
     }
   }
 
-  main section:nth-child(2n) {
+  main section:nth-child(even) {
     color: var(--clr-base-bg);
     background: var(--clr-base-txt);
   }
