Ajutes en el alto de secciones

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -47,6 +47,9 @@ import HeartIcon from "./Icons/HeartIcon.astro";
   <div class="content-navbar">
     <ul>
       <li>
+        <a href="#hero" aria-label="Go about me section">Inicio</a>
+      </li>
+      <li>
         <a href="#about" aria-label="Go about me section">Sobre Mí</a>
       </li>
       <li>
