--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -70,6 +70,7 @@ const { title } = Astro.props;
   }
 
   main > section:first-child {
+    min-height: 100svh;
     background: url(/img/hero-bg-mobile.svg);
     background-size: cover;
     background-repeat: no-repeat;
