--- a/src/components/sections/AboutSection.astro
+++ b/src/components/sections/AboutSection.astro
@@ -129,7 +129,7 @@ import SectionLayout from "@layouts/SectionLayout.astro";
   }
 
   .timeline-item h3 {
-    height: 60px;
+    height: auto;
     background: var(--base-clr);
     color: var(--text-clr);
     font-size: 1.2rem;
@@ -137,7 +137,7 @@ import SectionLayout from "@layouts/SectionLayout.astro";
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding: 5px;
+    padding: 15px 5px;
     border-radius: 7px;
   }
 
