--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,8 +17,8 @@ const { title } = Astro.props;
       algunos de mis últimos proyectos"
     />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
+    <link rel="shortcut icon" href="/favicon.ico" />
     <title>{title}</title>
   </head>
   <body>
