Eliminacion de informacion innecesaria.
Se ha eliminado el mismo portfolio como parte de los proyectos
y el curso de python de la cronologia.

--- a/src/components/sections/AboutSection.astro
+++ b/src/components/sections/AboutSection.astro
@@ -5,7 +5,7 @@ import SectionLayout from "@layouts/SectionLayout.astro";
 <SectionLayout id="about">
   <h1 class="title-section">Sobre mí</h1>
   <p class="about-text">
-    ¡Hola! Mi nombre es Felipe, soy un desarrollador junior front-end entusiasta
+    Soy un desarrollador junior front-end entusiasta
     que descubrió el fascinante mundo de la informática de manera fortuita.
     Aunque inicialmente me inclinaba hacia la física, gracias a una charla en mi
     instituto, decidí darle una oportunidad al mundo de la programación. Desde
@@ -28,7 +28,7 @@ import SectionLayout from "@layouts/SectionLayout.astro";
       </li>
       <li class="timeline-item">
         <span>Enero - Abril 2023</span>
-        <h3>Bootcamp Front-End Developer</h3>
+        <h3>Bootcamp Front-End Dev</h3>
         <h4>Escuela de Organización Industrial</h4>
         <div class="tecnologies">
           <span>Vue</span>
@@ -39,12 +39,11 @@ import SectionLayout from "@layouts/SectionLayout.astro";
         </div>
       </li>
       <li class="timeline-item">
-        <span>Cursando actualmente</span>
-        <h3>FullStack Python</h3>
-        <h4>IBM SkillsBuild</h4>
+        <span>Actualmente</span>
+        <h3>Autodidacta</h3>
         <div class="tecnologies">
-          <span>Python</span>
-          <span>Django</span>
+          <span>TypeScript</span>
+          <span>React</span>
         </div>
       </li>
     </ul>
