--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -1,7 +1,5 @@
 ---
 import CollapseIcon from "./Icons/CollapseIcon.astro";
-import GitHubIcon from "./Icons/GitHubIcon.astro";
-import LinkedInIcon from "./Icons/LinkedInIcon.astro";
 import HeartIcon from "./Icons/HeartIcon.astro";
 ---
 
@@ -56,22 +54,10 @@ import HeartIcon from "./Icons/HeartIcon.astro";
         <a href="#projects" aria-label="Go my proyects section">Proyectos</a>
       </li>
     </ul>
-    <div class="icons">
-      <a
-        href="https://github.com/JFelipeRG"
-        target="_blank"
-        aria-label="Go my github page"><GitHubIcon /></a
-      >
-      <a
-        href="https://www.linkedin.com/in/felipe-ramirez-722460263/"
-        target="_blank"
-        aria-label="Go my linkedin page"><LinkedInIcon /></a
-      >
-    </div>
     <hr />
     <span class="navbar-footer"
-      >Desarrollado con <span class="footer-icon"><HeartIcon /></span></span
-    >
+      >Desarrollado con <span class="footer-icon"><HeartIcon /></span>
+    </span>
   </div>
 </nav>
 
@@ -100,8 +86,8 @@ import HeartIcon from "./Icons/HeartIcon.astro";
     width: 100%;
     max-width: 440px;
     height: 100%;
-    background: #ccc;
-    color: var(--clr-base-bg);
+    background: #151515;
+    color: var(--clr-base-txt);
     transition: background 0.3s ease-in-out, color 0.3s ease-in-out;
     animation-name: unfold;
   }
@@ -136,25 +122,13 @@ import HeartIcon from "./Icons/HeartIcon.astro";
 
   a {
     text-decoration: none;
-    color: var(--clr-base-bg);
-  }
-
-  .icons {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    margin-top: 20px;
-  }
-
-  .icons a {
-    width: 3rem;
+    color: var(--clr-base-txt);
   }
 
   hr {
     width: 240px;
     margin: 20px 0;
   }
-
 
   .navbar-footer {
     display: flex;
